feat: add loading icon and fallback for user list

--- a/src/components/UserList/styles.scss
+++ b/src/components/UserList/styles.scss
@@ -1,7 +1,7 @@
 .user-list {
     display: flex;
     flex-direction: column;
-    padding: 20px 34px;
+    padding: 20px 59px 25px 34px;
     margin-left: 152px;
 
     &__header {
