feat: add user page

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,3 +4,33 @@
     margin: 0;
     padding: 0;
 }
+
+h4 {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+}
+
+button,
+p,
+a {
+    font-size: 12px;
+    line-height: 14px;
+}
+
+li {
+    font-size: 11px;
+    line-height: 13px;
+}
+
+input {
+    font-size: 10px;
+    line-height: 12px;
+}
+
+label {
+    p {
+        font-size: 8px;
+        line-height: 9px;
+    }
+}
