--- a/src/components/UserList/styles.scss
+++ b/src/components/UserList/styles.scss
@@ -1,14 +1,3 @@
-.user-list {
-    display: flex;
-    flex-direction: column;
-    padding: 20px 59px 25px 34px;
-    margin-left: 152px;
-
-    &__header {
-        margin: 0 0 5px 5px;
-    }
-
-    &__footer {
-        align-self: flex-end;
-    }
+.user-list__footer {
+    align-self: flex-end;
 }
