--- a/src/components/FormField/styles.scss
+++ b/src/components/FormField/styles.scss
@@ -9,10 +9,10 @@
         border-radius: 5px;
         padding: 5px 10px;
         width: 100%;
-    }
-
-    &__input_gray {
-        color: #0000004d;
+        outline: none;
+        &:focus {
+            border-color: #000;
+        }
     }
 
     &__input_error {
