fix: field 'comment' in form now readonly at render too

--- a/src/components/UserCard/styles.scss
+++ b/src/components/UserCard/styles.scss
@@ -29,5 +29,9 @@
     &__link {
         align-self: flex-end;
         text-decoration: none;
+
+        &:visited {
+            color: #4b51ef;
+        }
     }
 }
